crates/ir/tests/ir/snapshots/main__ir__lower__json__to_json_list.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__to_json_list

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/json/json_to_string as json_to_string(Json) -> String
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v5: Dict[core/json.ToJson, Int] = get_dict core/json.ToJson[Int]
  let v6: Dict[core/json.ToJson, List[Int]] = make_dict core/json.ToJson[List[Int]](v5)
  let v7: Json = trait_call core/json.ToJson.to_json(v6, v4)
  let v8: String = call json_to_string(v7)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v0, v8)
  v9
